--- a/country.html
+++ b/country.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>All Countries</title>
-  <link rel="stylesheet" href="../country/country.css"
+  <link rel="stylesheet" href="./country.css"
 </head>
 <body>
 
@@ -20,6 +20,6 @@
   <!-- Countries Container -->
   <div id="countries"></div>
 
-  <script src="../country/app.js"></script>
+  <script src="./country.js"></script>
 </body>
 </html>
