--- a/country.html
+++ b/country.html
@@ -10,8 +10,8 @@
 
   <!-- Navigation Bar -->
   <div>
-    <a href="../Users/index.html">Users</a> |
-    <a href="country.html">Country</a>
+    <a href="./index.html">Users</a> |
+    <a href="./country.html">Country</a>
   </div>
 
   <!-- Page Heading -->
