--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
   <!-- Navbar -->
   <nav>
-    <a href="./users.html" class="active">Users</a>
-    <a href="../country/country.html">Country</a>
+    <a href="./index.html" class="active">Users</a>
+    <a href="./country.html">Country</a>
   </nav>
 
   <!-- Page Heading -->
